update build and test commands

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
+    "build": "ng build legendary-dollop",
+    "test": "ng test legendary-dollop --watch=false --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
