--- a/package.json
+++ b/package.json
@@ -24,6 +24,21 @@
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
+  "release": {
+    "branch": "master",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/changelog",
+      "@semantic-release/github",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "dist/legendary-dollop"
+        }
+      ],
+      "@semantic-release/release-notes-generator"
+    ]
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular-devkit/build-ng-packagr": "~0.12.0",
@@ -44,6 +59,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
+    "@semantic-release/changelog": "^3.0.4",
+    "semantic-release": "^15.13.27",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
