update version yml name and add console log

--- a/.github/workflows/version-update.yml
+++ b/.github/workflows/version-update.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build ng-select
+      - name: Build legendary-dollop
         run: npm run build
 
       - name: Copy README
